# the_journal-mastodon-bot

./: .gitignore  README.md  generate_layer.sh  pyproject.toml
python/: main.py  utils.py
terraform/: cloudwatch.tf  lambda.tf  variables.tf
